confs/rules.v4
# Generated by iptables-save v1.4.21 on Sat Nov 26 13:51:22 2016
*nat
:PREROUTING ACCEPT [6956:531135]
:INPUT ACCEPT [3949:303472]
:OUTPUT ACCEPT [1739:121215]
:POSTROUTING ACCEPT [1086:67956]
#-A POSTROUTING -o eth1 -j MASQUERADE
-A POSTROUTING -s 10.0.1.0/24 -o tun0 -j MASQUERADE
-A POSTROUTING -s 10.0.0.0/24 -o tun0 -j MASQUERADE
-A POSTROUTING -s 10.0.1.0/24 -d 10.0.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.0.0.1/24 -d 10.0.1.0/24 -o wlan0 -j MASQUERADE
#-A POSTROUTING -o tun0 -j MASQUERADE
COMMIT
# Completed on Sat Nov 26 13:51:22 2016
# Generated by iptables-save v1.4.21 on Sat Nov 26 13:51:22 2016
*filter
:INPUT ACCEPT [50:3557]
:FORWARD ACCEPT [2:152]
:OUTPUT ACCEPT [28:2529]
-A FORWARD -i eth1 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o eth0 -j ACCEPT
-A FORWARD -i wlan0 -j ACCEPT
-A FORWARD -s 10.0.1.0/24 -d 10.0.0.0/24 -i wlan0 -o eth0 -j ACCEPT
-A FORWARD -s 10.0.0.0/24 -d 10.0.1.0/24 -i eth0 -o wlan0 -j ACCEPT
COMMIT
# Completed on Sat Nov 26 13:51:22 2016
